--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "phaser-webpack",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Phaser Webpack",
-  "main": "index.js",
+  "main": "src/js/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development",
@@ -24,16 +24,20 @@
   },
   "homepage": "https://github.com/sebsowter/phaser-webpack#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^2.0.2",
-    "copy-webpack-plugin": "^5.1.1",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^2.0.1",
+    "copy-webpack-plugin": "^5.0.2",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "phaser": "^3.22.0",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "json-loader": "^0.5.7",
+    "phaser": "^3.23.0",
+    "prettier": "2.1.2",
+    "ts-loader": "^7.0.0",
+    "typescript": "^3.8.3",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
