--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
-    "deploy": "gh-pages -d dist"
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -31,7 +30,6 @@
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "file-loader": "^3.0.1",
-    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "phaser": "^3.23.0",
