--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "phaser-webpack",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Phaser Webpack",
   "main": "src/js/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -24,20 +24,18 @@
   },
   "homepage": "https://github.com/sebsowter/phaser-webpack#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "babel-loader": "^8.0.5",
-    "clean-webpack-plugin": "^2.0.1",
-    "copy-webpack-plugin": "^5.0.2",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^8.1.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "json-loader": "^0.5.7",
-    "phaser": "^3.5.0",
-    "prettier": "2.1.2",
-    "ts-loader": "^7.0.0",
-    "typescript": "^3.8.3",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.11.0"
+    "phaser": "^3.54.0",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.9",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
