--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "json-loader": "^0.5.7",
-    "phaser": "^3.55.2",
+    "phaser": "^v3.60.0-beta.23",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.3",
     "webpack": "^5.77.0",
